# ROKAE_SDK_demo

./: CMakeLists.txt  README.md
data_in/: q.txt
src/: ROKAE_connect.cpp  ROKAE_in_1.cpp  ROKAE_in_txt.cpp  ROKAE_rt_tau_out.cpp  ROKAE_zero.cpp  example.cpp
